# finance

./: .gitignore  QUICKSTART.md  README-UV.md  README.md  app.py  app_types.py  bootstrap.py  config.yml  database.py  download.py  etfs.py  etfs_routes.py  fix_csv_precision.py  graph.py  import.py  migration_add_index_ticker_to_etf.sql  monitor.sh  perf.py  perf_pfolio.py  perf_pfolio_yearly.py  perf_yearly.py  pfolio.py  prova1.py  pyproject.toml  test_setup.py  update_quotes.py  update_quotes.sh
controllers/: __init__.py  etf_controller.py  index_controller.py  quote_controller.py  quote_sse_handler.py  types.py
core/: __init__.py  config.py  cronjob.py  database.py  log.py  types.py
database/: ETF.csv  etfs.db
database/dividends/: GOVS.MI.csv  GOVY.MI.csv  HSPD.MI.csv  IBGL.MI.csv  IBGM.MI.csv  IBGS.MI.csv  IBGX.MI.csv  IBGY.MI.csv  IBGZ.MI.csv  IEAG.MI.csv  IEGE.MI.csv  IUSA.MI.csv  IWRD.MI.csv  LGOV.MI.csv  SEGA.MI.csv  SP5EUY.MI.csv  SPX.MI.csv  SPY5.MI.csv  SS1EUA.MI.csv  VUSA.MI.csv  WLD.MI.csv  WRDEUA.MI.csv
database/quotes/: AAA13.MI.csv  AAA35.MI.csv  AAA57.MI.csv  C10.MI.csv  C13.MI.csv  C33.MI.csv  C53.MI.csv  C73.MI.csv  CSBGE3.MI.csv  CSBGE7.MI.csv  CSSPX.MI.csv  CSSX5E.MI.csv  CW8.MI.csv  EM1015.MI.csv  EM13.MI.csv  EM15.MI.csv  EM35.MI.csv  EM57.MI.csv  EM710.MI.csv  EMAAA.MI.csv  EMG.MI.csv  GOVS.MI.csv  GOVY.MI.csv  HMWD.MI.csv  HSPD.MI.csv  IBGL.MI.csv  IBGM.MI.csv  IBGS.MI.csv  IBGX.MI.csv  IBGY.MI.csv  IBGZ.MI.csv  IEAG.MI.csv  IEGE.MI.csv  IUSA.MI.csv  IWRD.MI.csv  LGOV.MI.csv  MWRD.MI.csv  PHAU.MI.csv  SEGA.MI.csv  SMSWLD.MI.csv  (+23 more)
doc/: delisted.txt  performance.txt  risk-profile  screener.txt
dto/: __init__.py  error_response.py  etf.py  etf_asset_type.py  etf_currency.py  etf_replication_type.py  etf_screener_filters.py  index.py  quote.py  quote_period.py  quote_response.py
example/: example1.py  example2.py  example3.py
flask/: app.py  database.py  etf.py.orig  etfs.py  etfs_api.py.orig  etfs_routes.py
flask/templates/: index.html
mappers/: __init__.py  etf_mapper.py  index_mapper.py
models/: __init__.py  etf.py  index.py  quote.py
pfolio/: 60-40-a.csv  60-40-b.csv  60-40-c.csv  60-40.csv  70-30-a.csv  70-30-b.csv  70-30-c.csv  70-30.csv  80-20-a.csv  80-20-b.csv  80-20-c.csv  80-20.csv  aggressivo.csv  allseason.csv  conservativo_oro.csv  conservativo_stoxx.csv  dinamico.csv  saver.csv
routes/: etf_routes.py  index_routes.py
services/: __init__.py  etf_service.py  index_service.py  quote_service.py  update_quotes_cronjob.py
templates/: base.html  header.html  index.html
templates/etf/: create.html  (+3 more)
(+4 files in other folders)
